# opensource-repo-analyser

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/repo_analyser/: __init__.py  cache.py  config.py  github_api.py  logging_utils.py  main.py  models.py
src/repo_analyser/agents/: workflow.py
src/repo_analyser/analysis/: issues.py  linking.py  prioritization.py  solution.py
src/repo_analyser/providers/: base.py  factory.py  huggingface.py  openrouter.py
src/repo_analyser/tools/: mcp.py
src/repo_analyser/web/: app.py
src/repo_analyser/web/static/: app.js  styles.css
src/repo_analyser/web/templates/: index.html
tests/: test_linking.py  test_prioritization.py
